--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <title>Form bootstrap</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
                 <h2>Aulas de Muay thai</h2>
                 <form>
                     <label class="form-label" for="Nome">Nome</label>
-                    <input class="form-control" type="text" id="nome">
+                    <input class="form-control" placeholder="Seu nome aqui" type="text" id="nome">
+
                     <label class="form-label" for="email" id="email">Seu email</label>
-                    <input class="form-control" type="email" name="email" id="email">
+                    <input class="form-control" placeholder="Seu email" type="email" name="email" id="email">
+                    
                     <label class="form-label" id="telefone" for="telefone">Telefone</label>
-                    <input class="form-control" type="tel" id="telefone">
+                    <input class="form-control" type="tel" placeholder="Seu telefone" id="telefone">
+                    
                     <button  class="btn btn-success" type="submit">Enviar</button>
                 </form>
     </div>
